--- a/Web.config
+++ b/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
 
-    <add name="DefaultConnection" connectionString="Server=tcp:clickpoll.database.windows.net,1433;Initial Catalog=ClickPollDatabase;Persist Security Info=False;User ID=fApmR7Qc9!T;Password=xMr?PlB*7t;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Backend=SqlAzure" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Server=tcp:clickpoll.database.windows.net,1433;Initial Catalog=ClickPollDatabase;Persist Security Info=False;User ID=fApmR7Qc9!T;Password=xMr?PlB*7t;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
 
   </connectionStrings>
   <appSettings>
