Fixed nav-bar and added authorization to make a petition page.

--- a/Web.config
+++ b/Web.config
@@ -9,7 +9,8 @@
   <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-
+    
+    <!-- Connection string to Azure remote database -->
     <add name="DefaultConnection" connectionString="Server=tcp:clickpoll.database.windows.net,1433;Initial Catalog=ClickPollDatabase;Persist Security Info=False;User ID=fApmR7Qc9!T;Password=xMr?PlB*7t;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
 
   </connectionStrings>
