--- a/Web.config
+++ b/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
@@ -9,10 +9,10 @@
   <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    
-    <!-- Connection string to Azure remote database -->
-    <add name="DefaultConnection" connectionString="Server=tcp:clickpoll.database.windows.net,1433;Initial Catalog=ClickPollDatabase;Persist Security Info=False;User ID=fApmR7Qc9!T;Password=xMr?PlB*7t;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
-
+    <add name="DefaultConnection" connectionString="Server=tcp:clickpoll.database.windows.net,1433;Initial Catalog=ClickPollDatabase;Persist Security Info=False;User ID=fApmR7Qc9!T;Password=xMr?PlB*7t;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+      providerName="System.Data.SqlClient" />
+    <add name="Assessment2___FinalDBContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=Assessment2___FinalDBContext-20200504155300; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|Assessment2___FinalDBContext-20200504155300.mdf"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
