Added DB initialier class and linked featured Causes page with it. Need to seed the DB so that Causes will appear on the page.

--- a/Assessment2 - Final.csproj
+++ b/Assessment2 - Final.csproj
@@ -181,6 +181,7 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Cause.cs" />
+    <Compile Include="Models\ClickPollDB.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Signature.cs" />
