Created Causes controller and associated views from Featured Causes link on main page. User must be logged in to use create action.

--- a/Web.config
+++ b/Web.config
@@ -9,9 +9,9 @@
   <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <!--<add name="DefaultConnection" connectionString="Server=tcp:clickpoll.database.windows.net,1433;Initial Catalog=ClickPollDatabase;Persist Security Info=False;User ID=fApmR7Qc9!T;Password=xMr?PlB*7t;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    <!--<add name="Assessment2___FinalDBContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=Assessment2___FinalDBContext-20200504155300; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|Assessment2___FinalDBContext-20200504155300.mdf"
       providerName="System.Data.SqlClient" /> -->
-    <add name="Assessment2___FinalDBContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=Assessment2___FinalDBContext-20200504155300; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|Assessment2___FinalDBContext-20200504155300.mdf"
+    <add name="ClickPollDB" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=ClickPollDB-20200506153730; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|ClickPollDB-20200506153730.mdf"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
