--- a/Assessment2 - Final.csproj
+++ b/Assessment2 - Final.csproj
@@ -172,19 +172,18 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\CauseManagerController.cs" />
+    <Compile Include="Controllers\CausesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Models\ClickPollDB.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Cause.cs" />
-    <Compile Include="Models\ClickPollDB.cs" />
+    <Compile Include="Models\ClickPollDbInitializer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="Models\Signature.cs" />
-    <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -590,14 +589,15 @@
     <Content Include="Views\Home\Privacy.cshtml" />
     <Content Include="Views\Home\StartAPetition.cshtml" />
     <Content Include="Views\Shared\_ValidationScriptsPartial.cshtml" />
-    <Content Include="Views\CauseManager\Create.cshtml" />
-    <Content Include="Views\CauseManager\Delete.cshtml" />
-    <Content Include="Views\CauseManager\Details.cshtml" />
-    <Content Include="Views\CauseManager\Edit.cshtml" />
-    <Content Include="Views\CauseManager\Index.cshtml" />
+    <Content Include="Views\Causes\Create.cshtml" />
+    <Content Include="Views\Causes\Delete.cshtml" />
+    <Content Include="Views\Causes\Details.cshtml" />
+    <Content Include="Views\Causes\Edit.cshtml" />
+    <Content Include="Views\Causes\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Data\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
